--- a/frontend/src/components/Navbar/Header/Header.css
+++ b/frontend/src/components/Navbar/Header/Header.css
@@ -6,6 +6,7 @@
     position: relative;
 }
 .header-contents{
+    
     position:absolute;
     display: flex;
     flex-direction: column;
@@ -17,9 +18,10 @@
     animation: fadeIn 3s;
 }
 .header-contents h2{
+    margin-top: 30px;
     font-weight: 500;
     color: white;
-    font-size: max(4.5vw, 22px);
+    font-size: max(3.5vw, 25px);
 }
 .header-contents p{
     color: white;
